# financial_manage

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
app/: Dockerfile  config.py  database.py  main.py  start.sh
app/dao/: base.py
app/finances/: caching.py  dao.py  models.py  rb.py  routes.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: 0a5268537a55_initial.py  20843e7be252_initial.py  996c9785d14a_initial.py
app/users/: auth.py  dao.py  models.py  routes.py  schemas.py
bot/: Dockerfile  config.py  dao.py  dialog_form.py  dialog_router.py  filters.py  inline_keyboards.py  main.py  reply_keyboard.py  router.py  schemas.py  service.py  utiils.py  utils.py
